# metafind

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml
docs/: index.md  requirements.txt
docs/stylesheets/: extra.css
metafind/: __main__.py  cli.py  client.py  clientfactory.py  errors.py  exifclient.py  exiftool.py  helper.py  metadata.py  models.py  output.py
tests/: test_cli.py
tests/files/: unknownfileformat.huh
